[project]
name = "pdf-metamorphose"
version = "0.1.0"
description = ""
authors = [
    { name = "Cosimo Crocchini", email = "616846+c84c@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "streamlit (>=1.43.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
